# Kufar-Telegram-Notifier

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Telegram.py  kufar-configuration.json  kufar.py  main.py  regions.py  service.py  settings.py  telegram.py  templates.py
Configurations/: KufarAPI.py  MariaDB.py  TelegramAPI.py
Kufar Telegram Notifier/: helperfunctions.cpp  helperfunctions.hpp  kufar.cpp  kufar.hpp  main.cpp  networking.cpp  networking.hpp  telegram.cpp  telegram.hpp
Kufar Telegram Notifier.xcodeproj/: project.pbxproj
Kufar Telegram Notifier.xcodeproj/xcshareddata/xcschemes/: Kufar Telegram Notifier (Debug).xcscheme  Kufar Telegram Notifier (Release).xcscheme
include/: kufar.hpp  networking.hpp
src/: helperfunctions.cpp  helperfunctions.hpp  kufar.cpp  main.cpp  networking.cpp  telegram.cpp  telegram.hpp
